Edited test result display config

--- a/site/guide/model-documentation/work-with-test-results.qmd
+++ b/site/guide/model-documentation/work-with-test-results.qmd
@@ -40,6 +40,19 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 8. After inserting the results into your document, click on the text to make changes or add comments.[^4]
 
+#### Configure test result displays
+
+Once added to your model documentation, validation reports, and ongoing monitoring reports, configure how the logged test results are displayed:
+
+1. Locate the test result whose display you want to configure, and hover over it until the result block's toolbar appears in the top right-hand corner.
+
+2. Select **{{< fa gear >}} Configure** and toggle the following options on or off as desired:[^5]
+
+    - **[hide title]{.smallcaps}**
+    - **[hide text]{.smallcaps}**
+    - **[hide parameters]{.smallcaps}**
+    - **[hide tables]{.smallcaps}**
+    - **[hide figures]{.smallcaps}**
 
 ## View test result metadata
 
@@ -47,7 +60,7 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^5]
+2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^6]
 
 3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
 
@@ -94,4 +107,13 @@ Filters can be removed from the list of test result metadata by clicking on the 
 
 [^4]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
 
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^5]: 
+
+    ::: {.callout}
+    ## Options displayed for each test result will depend on what was logged via the {{< var validmind.developer >}} for your test.
+
+    You can also adjust what is displayed on a test result directly via the {{< var vm.developer >}}: [`result.log()`](/validmind/validmind/vm_models.qmd#log)
+
+    :::
+
+[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
