Edited developer training for new content blocks

--- a/site/guide/model-documentation/work-with-test-results.qmd
+++ b/site/guide/model-documentation/work-with-test-results.qmd
@@ -22,7 +22,7 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 {{< include /guide/model-documentation/_add-content-block.qmd >}}
 
-5. Click {{< fa square-plus >}} and then select **Test-Driven**.[^3]
+5. Click {{< fa square-plus >}} and then select **Test-Driven**[^3] under [from library]{.smallcaps}.
 
     - By default, the [{{< fa code >}} Developer]{.bubble} role can add test-driven blocks within model documentation or ongoing-monitoring plans.
     - By default, the [{{< fa circle-check >}} Validator]{.bubble} role can add test-driven blocks within validation reports. 
