--- a/site/guide/monitoring/work-with-metrics-over-time.qmd
+++ b/site/guide/monitoring/work-with-metrics-over-time.qmd
@@ -44,7 +44,7 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 
     ![Adding a content block in the UI](/guide/model-documentation/add-content-block.gif){fig-alt="A gif showing the process of adding a content block in the UI" .screenshot}
 
-6. Click {{< fa square-plus >}} and then select **Metric Over Time**.[^4]
+6.  Click {{< fa square-plus >}} and then select **Metric Over Time**[^4] under [from library]{.smallcaps}.
 
     By default, only the [{{< fa code >}} Developer]{.bubble} role can add metrics over time within model documentation or ongoing monitoring plans.
 
