--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -437,10 +437,10 @@ With the custom test results logged, let's head to the model we connected to at 
 
 4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **+** button appears, indicating that you can insert a new block.
 
-5. Click **+** and then select **Test-Driven Block**:
+5. Click **+** and then select **Test-Driven Block** under [from library]{.smallcaps}:
 
-    - In the search bar, type in `ConfusionMatrix`.
-    - Select the custom `ConfusionMatrix` tests you logged above:
+    - Click on **Custom** under [test-driven]{.smallcaps} in the left sidebar.
+    - Select the two custom `ConfusionMatrix` tests you logged above:
 
     ![The ConfusionMatrix tests selected](/notebooks/EXECUTED/model_development/selecting-confusion-matrix-test.png){fig-alt="Screenshot showing the ConfusionMatrix tests selected" .screenshot}
 
