Fixed training registration JH link

--- a/site/training/_training-register.qmd
+++ b/site/training/_training-register.qmd
@@ -6,7 +6,7 @@
 
 2. **When you receive your access credentials**, make sure you can log in:
 
-   - **{{< var vm.product >}} JupyterHub** — <{{< var url.jupyterhub >}}/>
+   - **{{< var vm.product >}} JupyterHub** — [{{< var url.jupyterhub >}}]({{< var url.jupyterhub >}})
    - **{{< var validmind.platform >}}** — [{{< var url.us1 >}}]({{< var url.us1 >}})^[[Log in to {{< var vm.product >}}](/guide/configuration/log-in-to-validmind.qmd#public-internet)]
 
 3. **Join a free kick-off session**: Get an instructor-led hands-on demo.
