Updating guides listings

--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -48,7 +48,7 @@ listing:
     sort: false
     fields: [title, description]
     contents: 
-    - model-documentation/working-with-documentation-templates.qmd
+    - model-documentation/managing-templates-text-blocks.qmd
     - model-documentation/working-with-model-documentation.qmd
   - id: guides-developer
     type: grid
@@ -58,13 +58,20 @@ listing:
     contents: 
     - ../developer/validmind-library.qmd
     - ../developer/samples-jupyter-notebooks.qmd
-  - id: guides-model-validation
+  - id: guides-validator
     type: grid
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents: 
     - model-validation/manage-validation-guidelines.qmd
+    - model-documentation/managing-templates-text-blocks.qmd
+  - id: guides-model-validation
+    type: grid
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents: 
     - model-validation/preparing-validation-reports.qmd
     - model-validation/working-with-model-findings.qmd
   - id: guides-reports
@@ -139,14 +146,19 @@ First, document and test your models in your own model development environment w
 :::{#guides-developer}
 :::
 
-Then, work with documentation and customizable templates, and collaborate with model validators all within the {{< var validmind.platform >}}: 
+Then, work with documentation and customizable templates and reusable blocks, and collaborate with model validators all within the {{< var validmind.platform >}}: 
 
 :::{#guides-model-documentation}
 :::
 
 ## Model validation
 
-Set up validation guidelines and prepare validation reports, work with findings and evidence, and collaborate with model developers within the {{< var vm.platform >}}:
+Set up validation guidelines and customizable report templates and reusable blocks:
+
+:::{#guides-validator}
+:::
+
+Then, prepare validation reports, work with findings and evidence, and collaborate with model developers within the {{< var vm.platform >}}:
 
 :::{#guides-model-validation}
 :::
