--- a/site/guide/model-documentation/managing-templates-text-blocks.qmd
+++ b/site/guide/model-documentation/managing-templates-text-blocks.qmd
@@ -24,7 +24,7 @@ aliases:
   - working-with-documentation-templates.html
 ---
 
-Set up and use documentation templates and reusable text blocks within the {{< var validmind.platform >}} to standardize and streamline documentation and reporting for your organization.
+Set up and use templates and reusable text blocks within the {{< var validmind.platform >}} to standardize and streamline documentation and reporting for your organization.
 
 ## Manage documentation templates
 
