--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -210,7 +210,7 @@ For example:
 
 1. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
 
-2. Edit the description for our individually inserted `HighPearsonCorrelation:balanced_raw_dataset` test:
+2. Click on the text to edit the description for our individually inserted `HighPearsonCorrelation:balanced_raw_dataset` test:
 
   ![Screenshot showing description added to the new content block](/notebooks/images/high-pearson-correlation-block.png){fig-alt="Screenshot showing description added to the new content block" .screenshot}
 
