--- a/site/guide/model-documentation/content_blocks/_simple-text-block.qmd
+++ b/site/guide/model-documentation/content_blocks/_simple-text-block.qmd
@@ -1,2 +1,2 @@
-simple text block
+simple text block [new, from library]{.smallercaps .pink}
 : Can be added anywhere on model documentation, validation reports, or ongoing monitoring plans and edited to include additional documentation in text format.
