--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -11,10 +11,12 @@ Make edits to your model documentation, validation reports, or ongoing monitorin
 
 Content blocks provide you with sections that are part of a template, and are used in model documentation, validation reports, and ongoing monitoring plans.
 
-- You can think of these sections as an empty canvas that you fill in with text and test results. 
-- Multiple sections are joined to create a longer document with a table of contents that has different heading and subheading levels, such as "1.," "1.1.," and so on. 
+- You can think of these sections as an empty canvas that you fill in with text and test results.
+- Multiple sections are joined to create a longer document with a table of contents that has different heading and subheading levels, such as "1.," "1.1.," and so on.
 
 #### Content block types
+
+Content blocks can be new, blank blocks, or prepopulated via your library of logged test or metric results and text block templates:
 
 {{< include content_blocks/_simple-text-block.qmd >}}
 
@@ -70,10 +72,10 @@ While editing a simple text block, you can insert math equations using the formu
 
 1. Click **$f(x)$** in the toolbar while editing a content block.
 
-2. Enter your LaTeX formula in the text box and confirm that the Equation preview generates as expected: 
+2. Enter your LaTeX formula in the text box and confirm that the Equation preview generates as expected:
 
    - To insert the equation inline, leave **Display mode** untoggled.
-   - To insert the equation on its own line, toggle **Display mode** on. 
+   - To insert the equation on its own line, toggle **Display mode** on.
 
 ::: {.column-margin}
 ![Equation preview in the formula editor](equation-preview.png){fig-alt="A screenshot showing the equation preview in the formula editor" .screenshot group="latex"}
