--- a/site/guide/model-documentation/content_blocks/_metric-over-time-block.qmd
+++ b/site/guide/model-documentation/content_blocks/_metric-over-time-block.qmd
@@ -1,2 +1,2 @@
-metric over time block
+metric over time block [from library]{.smallercaps .pink}
 : Can be added within model documentation and ongoing monitoring plans to display one of the supported metric over time results collected by the {{< var vm.developer >}}.
