--- a/site/guide/model-documentation/manage-text-block-library.qmd
+++ b/site/guide/model-documentation/manage-text-block-library.qmd
@@ -6,7 +6,9 @@ date: last-modified
 Build a library of reusable text blocks to insert into your documentation templates. Reusable text blocks can be private, visible only to the user, or shared, accessible across your organization.
 
 ::: {.callout}
-By default, only the [{{< fa hand >}} Customer Admin]{.bubble} role[^1] is able to add, edit, or delete shared text blocks.
+## By default, only the [{{< fa hand >}} Customer Admin]{.bubble} role[^1] is able to add, edit, or delete shared text blocks.
+
+Private blocks can be modified by any user role and are unique to that user.
 :::
 
 ::: {.attn}
@@ -38,7 +40,7 @@ To create a new text block via the block library:
 
 5. Click **Add Block** to save your text block.
 
-#### Add existing text blocks to library
+### Add existing text blocks to library
 
 To transform an existing text block into a reusable block:
 
