New templates section

--- a/site/guide/templates/customize-documentation-templates.qmd
+++ b/site/guide/templates/customize-documentation-templates.qmd
@@ -3,9 +3,10 @@ title: "Customize documentation templates"
 date: last-modified
 aliases:
   - /guide/customize-documentation-templates.html
+  - /guide/model-documentation/customize-documentation-templates.html
 ---
 
-{{< var vm.product >}} offers robust and fully customizable templates for model documentation and validation reports. Configure these templates via multiple methods to suit your organization's unique needs. 
+Customize {{< var vm.product >}}'s templates for model documentation, validation reports, and ongoing monitoring reports to fit your specific case-by-case needs, such as type or complexity of model or model use case.
 
   - Templates are versioned and saving a documentation template after making changes or reverting to a previous version state always creates a new version, or you can duplicate templates to create new independent templates in your library. 
   - Documentation templates are stored as YAML files edited directly using the advanced editor, allowing you full control over the minitua such as desired guidelines. 
@@ -171,7 +172,7 @@ Common issues with YAML include incorrect indenting, imbalanced quotes, or missi
 
 ## What's next
 - [Swap documentation templates](swap-documentation-templates.qmd)
-- [Working with model documentation](working-with-model-documentation.qmd)
+- [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
 
 <!-- FOOTNOTES -->
@@ -180,7 +181,7 @@ Common issues with YAML include incorrect indenting, imbalanced quotes, or missi
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^3]: [Working with model documentation](working-with-model-documentation.qmd)
+[^3]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
 [^4]: [Template schema](#template-schema)
 
