--- a/site/guide/templates/swap-documentation-templates.qmd
+++ b/site/guide/templates/swap-documentation-templates.qmd
@@ -3,6 +3,7 @@ title: "Swap documentation templates"
 date: last-modified
 aliases:
   - /guide/swap-documentation-templates.html
+  - /guide/model-documentation/swap-documentation-templates.html
 ---
 
 Swap between different versions of your model documentation or validation report templates within the {{< var validmind.platform >}}. Switch to a completely different template, or apply another version of your current template.
@@ -82,7 +83,7 @@ If you added a simple text block to your old template and want to reuse the cont
 ## What's next
 
 - [Customize documentation templates](customize-documentation-templates.qmd)
-- [Working with model documentation](working-with-model-documentation.qmd)
+- [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
 
 <!-- FOOTNOTES -->
