--- a/site/guide/templates/view-documentation-templates.qmd
+++ b/site/guide/templates/view-documentation-templates.qmd
@@ -3,6 +3,7 @@ title: "View documentation templates"
 date: last-modified
 aliases:
   - /guide/view-documentation-templates.html
+  - /guide/model-documentation/view-documentation-templates.html
 ---
 
 View the structure and configuration of existing documentation templates within the {{< var vm.platform >}}. {{< var vm.product >}} provides default templates for documentation, validation reports, and ongoing monitoring plans.  
@@ -46,7 +47,7 @@ View the structure and configuration of existing documentation templates within 
 ## What's next
 
 - [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
-- [Collaborate on documentation](collaborate-with-others.qmd)
+- [Collaborate on documentation](/guide/model-documentation/collaborate-with-others.qmd)
 
 
 <!-- FOOTNOTES -->
