--- a/site/notebooks/EXECUTED/model_development/2-start_development_process.ipynb
+++ b/site/notebooks/EXECUTED/model_development/2-start_development_process.ipynb
@@ -74,6 +74,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc2_'></a>\n",
+    "\n",
     "## Setting up"
    ]
   },
@@ -686,8 +688,9 @@
     "    <img src= \"add-content-block.gif\" alt=\"Screenshot showing insert block button in model documentation\" style=\"border: 2px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;\">\n",
     "    <br><br>\n",
     "\n",
-    "5. Click **+** and then select **Test-Driven Block**:\n",
+    "5. Click **+** and then select **Test-Driven Block** under FROM LIBRARY:\n",
     "\n",
+    "    - Click on **VM Library** under TEST-DRIVEN in the left sidebar.\n",
     "    - In the search bar, type in `HighPearsonCorrelation`.\n",
     "    - Select `HighPearsonCorrelation:balanced_raw_dataset` as the test.\n",
     "\n",
